fix: remove extra padding

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 body {
   /* margin: 0 auto; */
   width: 100%;
-  padding: 20px 0px 20px 0px;
+  /* padding: 20px 0px 20px 0px; */
   height: 100vh;
   display: flex;
   align-items: center;
